<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kepler</string>

    <string name="action_refresh">Refresh</string>

    <string name="title_home">Suplování</string>
    <string name="title_food">Jídelna</string>
    <string name="title_links">Odkazy</string>
    <string name="title_settings">Nastavení</string>

    <string name="title_navigation_drawer">GJK</string>
    <string name="drawer_open">Otevři navigaci</string> <!-- accessibility -->
    <string name="drawer_close">Zavři navigaci</string> <!-- accessibility -->

    <string-array name="navigation_titles">
        <item>@string/title_home</item>
        <item>@string/title_food</item>
        <item>@string/title_links</item>
        <item>@string/title_settings</item>
    </string-array>
    <string-array name="navigation_icons">
        <item>@drawable/ic_menu_timetable</item>
        <item>@drawable/ic_menu_food</item>
        <item>@drawable/ic_menu_links</item>
        <item>@drawable/ic_menu_settings</item>
    </string-array>

    <string name="domain">http://kepler-dalimil.rhcloud.com/</string>

    <string name="links_content">
        <![CDATA[
        <a href="http://gjk.cz">GJK.CZ</a><br />
        <a href="https://study.gjk.cz">Study</a><br />
        <a href="http://dochazka.gjk.cz/login.aspx">Docházka</a><br />
        <a href="http://gjk.cz/o-skole/knihovna">Knihovna</a><br />
        <a href="http://gjk.cz/o-studiu/rozvrh-a-suplovani">Rozvrh</a><br />
        ]]>
    </string>

    <string name="pref_food">Podrobnosti o jídle</string>
    <string name="pref_food_summary">Zobrazovat alergeny u jednotlivých jídel</string>
    <string name="pref_soup">Polévky</string>
    <string name="pref_soup_summary">Zobrazovat u výpisu jídel i polévky</string>
    <string name="pref_notify">Notifikace</string>
    <string name="pref_notify_summary">Dostávat notifikace o změnách suplování</string>
    <string name="pref_class">Třída</string>
    <string name="pref_class_summary">Nastavte třídu, do které na GJK chodíte</string>
    <string-array name="pref_class_entries">
        <item>R1.A</item>
        <item>R2.A</item>
        <item>R3.A</item>
        <item>R4.A</item>
        <item>R5.A</item>
        <item>R6.A</item>
        <item>R7.A</item>
        <item>R8.A</item>
        <item>1.A</item>
        <item>1.B</item>
        <item>1.C</item>
        <item>2.A</item>
        <item>2.B</item>
        <item>2.C</item>
        <item>3.A</item>
        <item>3.B</item>
        <item>3.C</item>
        <item>4.A</item>
        <item>4.B</item>
        <item>4.C</item>
    </string-array>

</resources>
