<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/title_home" >
        <ListPreference
            android:key="pref_class"
            android:title="@string/pref_class"
            android:summary="@string/pref_class_summary"
            android:entries="@array/pref_class_entries"
            android:entryValues="@array/pref_class_entries"
            android:defaultValue="" />
        <CheckBoxPreference
            android:key="pref_notify"
            android:title="@string/pref_notify"
            android:summary="@string/pref_notify_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_food" >
        <CheckBoxPreference
            android:key="pref_food"
            android:title="@string/pref_food"
            android:summary="@string/pref_food_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>